no qc pass: wireguard over ipv4
failed: wireguard over ipv4
---------------------------------- 2025-09-16 17:26:09 25.9.16
no failed: wireguard over ipv4
qc pass: wireguard over ipv4
---------------------------------- 2025-09-22 00:11:28 25.9.22
no todo: terminal clear same as game clear
---------------------------------- 2025-09-27 04:57:55 25.9.27
no todo: config committed with check for saved and backup config
no todo: configure startup to have config committed but 4 now, only conf start tabbable stuffs
---------------------------------- 2025-09-27 07:57:54 25.9.27
qc pass: l3evpns over srv6 over ebgp
qc pass: l3evpns over srv6 over ibgp
qc pass: l3evpns over srv6 over ibgp rr
qc pass: l3evpns over srv6 over confed bgp
qc pass: l3evpns over srv6 over bgp route server
qc pass: l3evpns over srv6 over bgp with soft-reconfig
qc pass: l3evpns over srv6 over bgp additional path
---------------------------------- 2025-09-27 08:26:43 25.9.27
qc pass: l3otherevpns over srv6 over ebgp
qc pass: l3eothervpns over srv6 over ibgp
qc pass: l3otherevpns over srv6 over ibgp rr
qc pass: l3otherevpns over srv6 over confed bgp
qc pass: l3otherevpns over srv6 over bgp route server
qc pass: l3otherevpns over srv6 over bgp with soft-reconfig
qc pass: l3otherevpns over srv6 over bgp additional path
---------------------------------- 2025-09-28 11:52:28 25.9.28
no todo: ldap client, server
no qc pass: ppp with long multilink fragmentation
no qc pass: ppp routes with local authentication
no qc pass: ppp with pap authentication
qc pass: ppp with ldap authentication
qc pass: ppp with eap authentication
qc pass: ppp with short multilink fragmentation
---------------------------------- 2025-09-28 12:18:48 25.9.28
no qc pass: ppp with short multilink fragmentation
no qc pass: ppp with eap authentication
qc pass: ppp with pap authentication
qc pass: ppp routes with local authentication
qc pass: ppp with long multilink fragmentation
qc pass: ldap server