@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.10.4-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-10-04 13:13:34, took 00:13:47, with 50 workers, on 4054 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2025-10-04 13:56:04, took 00:19:58, with 50 workers, on 4054 cases, 1 failed, 0 traces, 8 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -2741,7 +2741,7 @@ http://sources.freertr.org/cfg/rout-bgp128.tst;rout-bgp128.tst;success;bgp chang
 http://sources.freertr.org/cfg/rout-bgp129.tst;rout-bgp129.tst;success;bgp change in standard community with soft-reconfig
 http://sources.freertr.org/cfg/rout-bgp130.tst;rout-bgp130.tst;success;bgp change in extended community with soft-reconfig
 http://sources.freertr.org/cfg/rout-bgp131.tst;rout-bgp131.tst;success;bgp aggregation
-http://sources.freertr.org/cfg/rout-bgp132.tst;rout-bgp132.tst;success;bgp maximum prefix in
+http://sources.freertr.org/cfg/rout-bgp132.tst;rout-bgp132.tst;#6-run-r1 tping 100 60 2.2.2.2 vrf v1;bgp maximum prefix in
 http://sources.freertr.org/cfg/rout-bgp133.tst;rout-bgp133.tst;success;evpn/pbb over ebgp
 http://sources.freertr.org/cfg/rout-bgp134.tst;rout-bgp134.tst;success;evpn/pbb over ibgp
 http://sources.freertr.org/cfg/rout-bgp135.tst;rout-bgp135.tst;success;evpn/pbb over bgp additional path
