@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.10.4-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-10-04 13:13:34, took 00:13:47, with 50 workers, on 4054 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2025-10-04 13:56:04, took 00:19:58, with 50 workers, on 4054 cases, 1 failed, 0 traces, 8 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -2753,7 +2753,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp129.tst">rout-bgp129.tst</a></td><td>success</td><td>bgp change in standard community with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp130.tst">rout-bgp130.tst</a></td><td>success</td><td>bgp change in extended community with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp131.tst">rout-bgp131.tst</a></td><td>success</td><td>bgp aggregation</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp132.tst">rout-bgp132.tst</a></td><td>success</td><td>bgp maximum prefix in</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp132.tst">rout-bgp132.tst</a></td><td>#6-run-r1 tping 100 60 2.2.2.2 vrf v1</td><td>bgp maximum prefix in</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp133.tst">rout-bgp133.tst</a></td><td>success</td><td>evpn/pbb over ebgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp134.tst">rout-bgp134.tst</a></td><td>success</td><td>evpn/pbb over ibgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp135.tst">rout-bgp135.tst</a></td><td>success</td><td>evpn/pbb over bgp additional path</td></tr>
